<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/btn_search_movies"
        android:title="@string/search_movies"
        android:icon="@drawable/ic_search_black_24dp"
        app:showAsAction="never" />

    <item
        android:id="@+id/btn_search_tvshow"
        android:title="@string/search_tvshow"
        android:icon="@drawable/ic_search_black_24dp"
        app:showAsAction="never" />

    <item
        android:id="@+id/btn_languange"
        android:title="@string/language"
        android:icon="@drawable/ic_language_black_24dp"
        app:showAsAction="never" />

    <item
        android:id="@+id/btn_setting_app"
        android:title="@string/setting"
        android:icon="@drawable/ic_settings_black_24dp"
        app:showAsAction="never" />
</menu>