<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_movies">

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.azhara.proyekakhirdicoding.ui.favorite.FavoriteFragment"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_favorite" />
    <fragment
        android:id="@+id/navigation_movies"
        android:name="com.azhara.proyekakhirdicoding.ui.movies.MoviesFragment"
        android:label="@string/movies"
        tools:layout="@layout/fragment_movies" />
    <fragment
        android:id="@+id/navigation_tvshow"
        android:name="com.azhara.proyekakhirdicoding.ui.tvshow.TvShowFragment"
        android:label="@string/tv_show"
        tools:layout="@layout/fragment_tv_show" />
</navigation>